--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,21 @@
         </plugins>
     </build>
 
+    <developers>
+        <developer>
+            <name>Rhys Evans</name>
+            <email>rhyse@opentext.com</email>
+            <organization>Open Text</organization>
+            <organizationUrl>http://www.opentext.com</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git@github.com:opentext/otag-tomcat-listener.git</connection>
+        <developerConnection>scm:git:git@github.com:opentext/otag-tomcat-listener.git</developerConnection>
+        <url>git@github.com:opentext/otag-tomcat-listener.git</url>
+    </scm>
+
     <dependencies>
         <dependency>
             <groupId>org.apache.tomcat</groupId>
