--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
         central /lib directory of the container to be effective.
     </description>
 
+    <url>https://github.com/opentext/otag-tomcat-listener</url>
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -99,6 +101,13 @@
             </plugin>
         </plugins>
     </build>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
 
     <developers>
         <developer>
